[gd_scene format=3 uid="uid://dl2ed4gkybggf"]

[ext_resource type="Script" uid="uid://br1k30d32naot" path="res://scripts/player.gd" id="1_ffboj"]
[ext_resource type="PackedScene" uid="uid://cp7fm1480uxox" path="res://models/tuxedo_mask_running_blocky.glb" id="2_i825w"]
[ext_resource type="PackedScene" uid="uid://c0e27836xgmhi" path="res://objects/character.tscn" id="2_nero3"]
[ext_resource type="Texture2D" uid="uid://8ggihh27mlrr" path="res://sprites/blob_shadow.png" id="3_0c7wt"]
[ext_resource type="PackedScene" uid="uid://c80vi2vqhkbyk" path="res://models/tuxedo_mask_running_blocky_casual.glb" id="3_3rfka"]
[ext_resource type="ArrayMesh" uid="uid://deu06eho4c74" path="res://meshes/dust.res" id="4_mvhqy"]
[ext_resource type="AudioStream" uid="uid://cydjn1ct3hps2" path="res://sounds/walking.ogg" id="5_ics1s"]
[ext_resource type="PackedScene" uid="uid://s52xvmku88ab" path="res://models/tuxedo_mask_job_done.glb" id="8_3rfka"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gdq8c"]
radius = 0.3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_q7stj"]
diffuse_mode = 2
specular_mode = 2
metallic_specular = 0.0
backlight = Color(0, 0.521569, 0.709804, 1)
billboard_keep_scale = true
grow_amount = 1.882
proximity_fade_distance = 0.25

[sub_resource type="Curve" id="Curve_xh1e2"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.249284, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_f46kd"]
curve = SubResource("Curve_xh1e2")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_3rerk"]
particle_flag_align_y = true
emission_shape = 1
emission_sphere_radius = 0.2
direction = Vector3(0, 0, 0)
gravity = Vector3(0, 0.1, 0)
scale_min = 0.75
scale_curve = SubResource("CurveTexture_f46kd")

[node name="Player" type="CharacterBody3D" unique_id=362187723]
script = ExtResource("1_ffboj")

[node name="Collider" type="CollisionShape3D" parent="." unique_id=253682523]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_gdq8c")

[node name="tuxedo_job_done" parent="." unique_id=44467119 instance=ExtResource("8_3rfka")]
visible = false

[node name="tuxedo_run" parent="." unique_id=1496909391 instance=ExtResource("2_i825w")]
visible = false

[node name="casual_run" parent="." unique_id=1208251044 instance=ExtResource("3_3rfka")]

[node name="Character" parent="." unique_id=1992817565 instance=ExtResource("2_nero3")]
visible = false

[node name="leg-left" parent="Character/character/root" parent_id_path=PackedInt32Array(1992817565, 1626033872) index="0" unique_id=1645578592]
transform = Transform3D(1.0000001, 0, 0, 0, 0.8729306, 0.4878445, 0, -0.48784444, 0.8729307, 0.125, 0.239, 0.077)

[node name="leg-right" parent="Character/character/root" parent_id_path=PackedInt32Array(1992817565, 1626033872) index="1" unique_id=115838770]
transform = Transform3D(1.0000001, 0, 0, 0, 0.83757573, -0.54632133, 0, 0.5463213, 0.83757585, -0.125, 0.229, -0.193)

[node name="torso" parent="Character/character/root" parent_id_path=PackedInt32Array(1992817565, 1626033872) index="2" unique_id=1192851206]
transform = Transform3D(1, 0, 0, 0, 0.996194, 0.08715568, 0, -0.08715568, 0.996194, -1.80478e-15, 0.17625, -0.02375)

[node name="arm-left" parent="Character/character/root/torso" index="0" unique_id=1404150192]
transform = Transform3D(0.96592605, -0.25881913, 0, 0.25881913, 0.96592605, 0, 0, 0, 1, 0.3, 0.175, 0)

[node name="arm-right" parent="Character/character/root/torso" index="1" unique_id=892310424]
transform = Transform3D(0.96592605, 0.25881913, 0, -0.25881913, 0.96592605, 0, 0, 0, 1, -0.3, 0.1195, 0)

[node name="Shadow" type="Decal" parent="." unique_id=1567074835]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.9, 0)
size = Vector3(1, 2, 1)
texture_albedo = ExtResource("3_0c7wt")
modulate = Color(1, 1, 1, 0.705882)
normal_fade = 0.5

[node name="ParticlesTrail" type="GPUParticles3D" parent="." unique_id=679588269]
physics_interpolation_mode = 2
material_override = SubResource("StandardMaterial3D_q7stj")
cast_shadow = 0
amount = 60
fixed_fps = 0
process_material = SubResource("ParticleProcessMaterial_3rerk")
draw_pass_1 = ExtResource("4_mvhqy")

[node name="SoundFootsteps" type="AudioStreamPlayer" parent="." unique_id=730904847]
stream = ExtResource("5_ics1s")
volume_db = -5.0
pitch_scale = 1.25
autoplay = true

[editable path="Character"]
